public/assets/css/style.css
* {
  box-sizing: border-box; }

html {
  font-family: 'Open Sans', 'Segoe UI', arial, sans-serif;
  font-size: 14px;
  color: #111;
  background-color: #f1f1f1;
  overflow-x: hidden; }

body {
  position: relative;
  margin: 0 auto;
  background-color: #fff;
  overflow-x: hidden; }

body, div {
  box-sizing: border-box; }

h1, h2, h3, h4, h5, h6 {
  color: #555;
  font-weight: 300; }

h1 {
  font-size: 30px;
  margin: 0 0 20px; }

h2, h3, h4, h5, h6 {
  margin: 0 0 10px; }

h2 {
  font-size: 24px; }

h3 {
  font-size: 22px; }

h4 {
  font-size: 18px; }

h5 {
  font-size: 16px; }

h6 {
  font-size: 14px; }

a, a:link, a:active, a:visited {
  color: #69c;
  text-decoration: none;
  cursor: pointer; }

a:hover {
  color: #5588bb; }

h1 {
  padding: 0;
  margin: 0 0 10px 0; }

img {
  border: none; }

ul, ol {
  padding: 10px 1em;
  margin: 0; }
  ul ul, ul ol, ol ul, ol ol {
    padding: 0 0 0 25px; }
  ul > li:not(:last-child), ol > li:not(:last-child) {
    padding-bottom: 2px; }

ul {
  list-style: inside disc; }

ol {
  list-style-position: inside; }

button {
  font-size: 18px;
  cursor: pointer;
  background-color: #ddd;
  color: #333;
  border: 1px solid #333;
  border-radius: 5px;
  font-family: 'Segoe UI', arial, sans-serif; }
  button:hover {
    color: #111;
    background-color: #cccccc;
    border-color: #111; }

section:not(:last-child) {
  margin-bottom: 20px; }

input::-moz-focus-inner, button::-moz-focus-inner {
  border: 0; }

input, select, textarea {
  font-family: 'Segoe UI', arial, sans-serif; }

input[type=text], input[type=password], input[type=email] {
  text-align: left;
  width: 150px;
  height: 18px;
  font-size: 14px; }

table {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse; }

header.main nav, footer.main nav {
  margin: 0 auto; }
  header.main nav ul, footer.main nav ul {
    padding: 0; }
    header.main nav ul li, footer.main nav ul li {
      padding: 0 10px;
      display: inline-block;
      line-height: 34px;
      font-size: 17px; }
  header.main nav > ul > li:first-child, footer.main nav > ul > li:first-child {
    padding-left: 0; }

header.main {
  background-color: #369;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 34px;
  z-index: 10; }
  header.main.docs nav li#doc-version-option {
    display: inline-block; }
    header.main.docs nav li#doc-version-option a#doc-version-toggle:after {
      font-family: "FontAwesome";
      content: " \f0d7"; }
    header.main.docs nav li#doc-version-option ul {
      display: none;
      position: absolute;
      top: 100%;
      right: 0;
      border: 1px solid #ccc; }
      header.main.docs nav li#doc-version-option ul.open {
        display: block; }
      header.main.docs nav li#doc-version-option ul li {
        background: #f1f1f1;
        width: 100%;
        padding: 0;
        white-space: nowrap; }
        header.main.docs nav li#doc-version-option ul li:hover {
          background: #e0e0e0; }
        header.main.docs nav li#doc-version-option ul li:not(:last-of-type) {
          border-bottom: 1px solid #fff; }
        header.main.docs nav li#doc-version-option ul li a {
          width: 100%;
          padding: 2px 10px;
          display: inline-block; }
          header.main.docs nav li#doc-version-option ul li a, header.main.docs nav li#doc-version-option ul li a:link, header.main.docs nav li#doc-version-option ul li a:visited, header.main.docs nav li#doc-version-option ul li a:active {
            color: #333; }
          header.main.docs nav li#doc-version-option ul li a:hover {
            color: #222222; }
  header.main nav:after {
    content: "";
    display: table;
    clear: both; }
  header.main nav li.current {
    background-color: #5ad; }
  header.main nav li.aux {
    display: none;
    float: right;
    position: relative; }
  header.main nav a, header.main nav a:link, header.main nav a:active, header.main nav a:visited {
    color: #fff; }
  header.main nav a:hover {
    color: #def; }

main {
  display: block;
  position: relative;
  margin: 0 auto;
  padding: 44px 10px 10px; }
  main nav.sidebar {
    padding-top: 10px;
    position: fixed;
    top: 34px;
    overflow-y: auto; }
    main nav.sidebar ul {
      padding-top: 0;
      padding-bottom: 0;
      list-style: inside none; }
      main nav.sidebar ul:not(:last-child) {
        margin-bottom: 20px; }
  main.docs article h2, main.docs article h3, main.docs article h4, main.docs article h5 {
    padding-top: 34px;
    margin-top: -34px; }

footer.main {
  padding: 30px 0;
  text-align: center;
  background-color: #f1f1f1;
  color: #888; }
  footer.main nav .logo {
    color: #aaa; }
    footer.main nav .logo .logo-dev {
      border-left-color: #888;
      color: #888; }
  footer.main nav a, footer.main nav a:link, footer.main nav a:visited {
    color: #888; }
  footer.main nav a:hover {
    color: #777777; }
  footer.main nav li#mobile-menu, footer.main nav li#doc-version-option {
    display: none; }
  footer.main nav li:last-child {
    padding-right: 0; }

blockquote {
  background: #def;
  padding: 10px;
  margin: 10px 30px; }

pre {
  padding: 10px;
  background: #f1f1f1;
  position: relative;
  overflow: auto; }

code {
  font-family: Consolas, Monaco, "Andale Mono", monospace; }

p code {
  background: #f1f1f1; }

.logo {
  color: #bbe5ff; }
  .logo .logo-dev {
    border-left: 1px solid #7cf;
    color: #7cf; }

.scroll-anchor {
  padding-top: 34px;
  margin-top: -34px; }

#gray-out {
  display: none;
  background: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1; }

@media screen and (max-device-width: 474px) {
  header.main nav > ul > li.movable {
    display: none; }

  #sidebar-main-nav {
    display: block; } }
@media screen and (min-device-width: 475px) and (max-device-width: 1023px) {
  header.main nav > ul > li.movable {
    display: inline-block; }

  /* We have enough room for the nav up top */
  #sidebar-main-nav {
    display: none; }

  /* Don't display the sidebar on non-doc pages */
  header.main:not(.docs) nav > ul > li#mobile-menu {
    display: none; } }
@media screen and (max-device-width: 1023px) {
  body.nav-open main nav.sidebar {
    -moz-transform: translate3d(-100%, 0, 0);
    -ms-transform: translate3d(-100%, 0, 0);
    -webkit-transform: translate3d(-100%, 0, 0);
    transform: translate3d(-100%, 0, 0);
    -moz-transition: .3s;
    -webkit-transition: .3s;
    transition: transform .3s; }
  body.nav-open #gray-out {
    display: block; }

  header.main nav > ul > li#mobile-menu {
    display: inline-block;
    padding: 0;
    font-size: 34px;
    /* Make the link easier to click by making it wide */ }
    header.main nav > ul > li#mobile-menu a {
      display: inline-block;
      padding: 0 10px; }
  header.main nav > ul > li:first-child {
    /* Add some left-padding so the logo is not scrunched against the side */
    padding-left: 10px; }
  header.main nav > ul > li:nth-last-of-type(3) {
    padding-right: 10px; }

  main nav.sidebar {
    border-left: 1px solid #ccc;
    left: 100%;
    height: 100%;
    min-width: 25%;
    padding-left: 10px;
    background: #f1f1f1;
    z-index: 5;
    -webkit-transition: -webkit-transform .3s;
    -moz-transition: -moz-transform .3s;
    -o-transition: -o-transform .3s;
    transition: transform .3s; }
    main nav.sidebar li {
      white-space: nowrap; } }
@media screen and (min-device-width: 1024px) {
  #sidebar-main-nav {
    display: none; }

  header.main nav, footer.main nav {
    width: 1024px; }
    header.main nav > ul > li, footer.main nav > ul > li {
      /* In the desktop version, the third-to-lst item is the last visible one */ }
      header.main nav > ul > li#mobile-menu, footer.main nav > ul > li#mobile-menu {
        display: none; }
      header.main nav > ul > li:nth-last-of-type(3), footer.main nav > ul > li:nth-last-of-type(3) {
        padding-right: 0; }

  main {
    width: 1024px;
    /* Don't display the sidebar on non-doc pages */ }
    main:not(.docs) nav.sidebar {
      display: none; }
    main nav.sidebar {
      padding: 20px 10px 10px 0;
      float: left;
      width: 230px;
      bottom: 0; }
    main.docs article {
      /* Force the left-border to be drawn from the nav bar */
      margin: -10px 0 -10px 230px;
      padding: 10px 0 10px 20px;
      border-left: 1px solid #ccc; } }
@media screen and (min-device-height: 650px) {
  main {
    min-height: 600px; } }

